--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('./home.css');
+@import url('./NavMenu.css');
 html,
 body {
   padding: 0;
@@ -10,12 +12,16 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+ul {
+  list-style: none;
+}
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +29,10 @@ a {
     color: white;
     background: black;
   }
-}
+} */
+/* 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+} */
