--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('./home.css');
 @import url('./NavMenu.css');
+
+
 html,
 body {
   padding: 0;
